render using DOM

--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
     <section class="dojo">
         <div class="quiz-body">
             <header>
+                <div id="score">Score: <strong>0</strong></div>
                 <!-- <h1>Quiz Ninja!</h1> -->
                 <h1> </h1>
             </header>
+            <div id="question"></div>
+            <div id="result"></div>
+            <div id="info"></div>
         </div>
     </section>
 
