--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             <header>
                 <div id="score">Score: <strong>0</strong></div>
                 <!-- <h1>Quiz Ninja!</h1> -->
-                <h1> </h1>
+                <h1>Quiz</h1>
+                <button id='start'>Cick to Start</button>
             </header>
             <div id="question"></div>
             <div id="result"></div>
