--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
                 <button id='start'>Cick to Start</button>
             </header>
             <div id="question"></div>
+
+
+            <form id='response'>
+                <input name='answer' type="text">
+                <button type='submit'>Submit</button>
+            </form>
+
             <div id="result"></div>
             <div id="info"></div>
         </div>
