--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <section class="dojo">
         <div class="quiz-body">
             <header>
+                <div id="timer">Time: <strong>20</strong></div>
                 <div id="score">Score: <strong>0</strong></div>
                 <!-- <h1>Quiz Ninja!</h1> -->
                 <h1>Quiz</h1>
