--- a/index.html
+++ b/index.html
@@ -17,13 +17,9 @@
                 <h1>Quiz</h1>
                 <button id='start'>Cick to Start</button>
             </header>
-            <div id="question"></div>
+            <div id="question"></div> 
 
-
-            <form id='response'>
-                <input name='answer' type="text">
-                <button type='submit'>Submit</button>
-            </form>
+            <div id='response'></div>
 
             <div id="result"></div>
             <div id="info"></div>
